# bmw_gtr_ros2

./: .gitignore  Dockerfile  README.md  docker-compose.pc.yml  docker-compose.rpi.yml  docker-compose.yml
bmw_gtr/: CMakeLists.txt  package.xml
bmw_gtr/bmw_gtr/: automobile_data_interface.py  automobile_data_simulator.py  control_car.py  keyboard_control.py  main_brain.py  main_brain2.py  main_brain_dynamic.py  main_brain_eugen.py  mpc_dyn_model.py  mpc_kin.py  mpc_kin_model.py  mpc_kin_model_eugen.py  path_planning_eugen.py  ref_time2spatial.py  reference_generation2.py  reference_generation2dyn.py  reference_generation_velocity.py  reference_trajectory_generation.py  speed_profile_opt.py  test_control.py  test_control2.py
bmw_gtr/bmw_gtr/data/: event_types.txt  hw.txt  int_out.txt  no_lane.txt
bmw_gtr/launch/: gazebo.launch.py  headless.launch.py  mpc.launch.py  simulator.launch.py  spawn_car.launch.py
bmw_gtr/models/lidar/: model.config  model.sdf
bmw_gtr/models/m3_gtr/: model.config  model.sdf
bmw_gtr/models/m3_gtr/meshes/: M3_GTR_Body.dae  M3_GTR_Wheel.dae
bmw_gtr/models/rcCar_assembly/: model.sdf
bmw_gtr/models/sonar2/: model.sdf
bmw_gtr/models/track/: model.config
bmw_gtr/mpc_car/: automobile_data_simulator.py  helper_functions.py  main_brain.py  main_brain_derivative.py  mpc_controller.py  mpc_controller_derivative.py  path_planning_eugen.py  plot.py  reference_generation_velocity.py
bmw_gtr/mpc_car/data/: event_points.txt  final_graph.graphml
bmw_gtr/mpc_car/logs/: mpc_log_2025-10-24_19-40-59_NICE.csv  mpc_log_2025-10-25_10-18-55-SUPER.csv  mpc_log_2025-10-25_11-12-13-Video.csv  mpc_log_2025-10-25_14-24-29-ROUNDAB.csv
bmw_gtr/msg/: Localisation.msg
bmw_gtr/plugins/include/: bno055_plugin.hpp  carlikerobot_ros_plugin.hpp  gps_plugin.hpp
bmw_gtr/plugins/src/: bno055_plugin.cpp  carlikerobot_ros_plugin.cpp  gps_plugin.cpp
bmw_gtr/scripts/: automobile_data_interface.py  automobile_data_simulator.py  call_generate_path.py  control_car.py  dyn_model_VDRTimeCTRL.py  dyn_model_accxRTimeCTRL.py  half_spatial_kin_model.py  helper_functions.py  helper_functions_original.py  kin_RT2.py  kin_RT2_refactored.py  main_brain.py  mpc_kin.py  mpc_kin_model.py  path_planning1.py  path_planning4_mod.py  path_planning_eugen2.py  path_random.npy  path_roundabout.npy  path_tunnel.npy  ref_time2spatial.py  reference_generation_v.py  reference_trajectory_generation.py  reference_trajectory_generation1.py  reference_trajectory_generation2.py  results.csv  spatial_kin_model.py  spatial_kin_model2.py  test2.py  test_control.py  test_control2.py  trajectory.npy  vehicle_params.py
bmw_gtr/scripts/data/: events_config.json  stop_lines.txt
bmw_gtr/worlds/: bfmc_track.world
bmw_gtr_ros2/: CMakeLists.txt  package.xml
bmw_gtr_ros2/launch/: spawn_car.launch.py
bmw_gtr_ros2/launch/sublaunchers/: car.launch
bmw_gtr_ros2/models/camera/: model.sdf
bmw_gtr_ros2/models/camera_top/: model.sdf
bmw_gtr_ros2/models/sonar1/: model.sdf
bmw_gtr_ros2/models/sonar3/: model.sdf
bmw_gtr_ros2/plugins/include/: carlikerobot.hpp  carlikerobot_ros_plugin.hpp
bmw_gtr_ros2/plugins/src/: carlikerobot.cpp  carlikerobot_ros_plugin.cpp
docker/: Dockerfile.pc  Dockerfile.rpi  requirements.txt  requirements_rpi.txt
src/brain/: package.xml  setup.py
src/brain/brain/: automobile_data_interface.py  automobile_data_simulator.py  automobile_data_simulator_ukf.py  keyboard_control.py  main_brain.py  main_brain_deriv.py  main_brain_dyn.py  mpc_controller.py  mpc_controller_deriv.py  mpc_controller_dyn.py  mpc_controller_soft.py  path_planning_eugen.py  reference_generation_velocity.py  ukf_intf.py
src/brain/brain/data/: round_in.txt
src/brain/brain/logs/: mpc_log_2025-10-24_20-05-38-Good.csv  mpc_log_2025-10-25_16-06-26.csv  mpc_log_2025-10-25_16-08-27.csv  mpc_log_2025-10-28_18-51-04.csv  mpc_log_2025-10-28_19-52-10-ehhh.csv  mpc_log_2025-11-01_15-42-29-tunnel100.csv  mpc_log_2025-11-01_17-09-12-DD.csv  mpc_log_2025-11-01_17-43-36-DD06.csv  mpc_log_2025-11-01_18-43-56 -Intersting.csv  mpc_log_2025-11-01_19-16-37.csv  mpc_log_2025-11-14_11-38-24-randomdd.csv  mpc_log_2025-11-14_12-14-25-round12.csv  mpc_log_2025-11-14_15-44-04-CrazyEndCost-3rd-exitRB.csv  mpc_log_2025-11-14_16-02-16-WTF-THIS-SUPER-GOOD.csv  mpc_log_2025-11-14_16-14-43.csv  mpc_log_2025-11-14_16-17-51.csv  mpc_log_2025-11-14_16-20-22.csv  mpc_log_2025-11-14_16-23-27.csv  mpc_log_2025-11-14_16-24-19.csv  mpc_log_2025-11-14_16-27-30-RANDOM START NEG INDEX.csv  mpc_log_2025-11-14_16-33-32.csv  mpc_log_2025-11-14_16-35-16.csv  mpc_log_2025-11-14_16-36-14_random_fine_veryLowLatECoef.csv  mpc_log_2025-11-14_17-22-47_FIRST_RUN_LATER_FIXED_MISALIGN.csv  mpc_log_2025-11-14_17-29-35.csv  mpc_log_2025-11-14_17-31-55.csv  mpc_log_2025-11-14_17-32-35.csv  mpc_log_2025-11-14_17-34-50.csv  mpc_log_2025-11-14_17-36-19.csv  mpc_log_2025-11-14_17-42-53_FasterThanUsual.csv  mpc_log_2025-11-14_17-48-03_fast_with_velocity_profile.csv  mpc_log_2025-11-14_17-53-46.csv  mpc_log_2025-11-14_17-55-46.csv
src/brain/estimation/: test.py  test2.py  test3.py  test3_plot.py  ukf_estimate.py  ukf_estimate_backup.py  ukf_estimate_class.py
src/brain/launch/: main_brain.launch.py
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: IMU.msg
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: gazebo.launch.py  headless.launch.py  mpc.launch.py  simulator.launch.py  spawn_car.launch.py
src/simulator/models/fixed_camera/: model.config  model.sdf
src/simulator/models/track/materials/scripts/: bfmc_track.material
src/simulator/plugins/include/: bno055_plugin.hpp  gps_plugin.hpp
src/simulator/plugins/src/: bno055_plugin.cpp  carlikerobot.cpp  gps_plugin.cpp
src/simulator/scripts/: camera_dashboard.py  delete_entity_node.py
src/simulator/worlds/: bfmc_track.world
