<?xml version="1.0"?>
<package format="3">
  <name>brain</name>
  <version>0.0.1</version>
  <description>Brain and control logic</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
